2005-02-20  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* many files
	  - made bearing switchable between relative and absolute values
	  - store pointer to game in user_interface simplifying many
	    functions

2005-02-16 Andy Rice
	* SConstruct, SConscript
		- Updated so everything builds on Mac OSX

2005-02-13  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* read keys by name from config file and not by number
	 - will avoid problems when adding new keys somewhere in the mid of
           the key list
	* make water detail configureable by config file

2005-02-12  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* fixed some keys
	* added analogue clock to periscope screen

2005-02-07  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* texture.cpp
	 - automatic resizing of too large textures
	   to video card limit
	   (e.g. Voodoo3 has max. 256 sized textures)

2005-02-06  Andrew Rice
	* many files
	 - added code for deck gun simulation and shooting

2005-01-30  Thorsten Jordan  <thorsten_jordan@gmx.de>, Andrew Rice
	* replaced direct SDL audio usage by SDL mixer usage
	 - now sound effects can be ogg files
	 - code much smaller and simpler
	 - will need libvorbis library
	* Andrew:
	 - fixes so that code compiles with macosx
	 - scope shows black when lowered
	* user defineable keys
	 - changeable in menu
	 - stored in config
	 - now keyboard language independent input
	* various small fixes all over the place
	* Added newer periscope graphics from Luis Barrancos

--- release 0.0.19

2004-12-07  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* everywhere LOTS OF THINGS
	 - mostly fixes, internal restructuring of display/interface code
	 - complete new system of handling input
	 - particle system, better graphics
	 - new model o class dd
	 - italian language
	 - new build system (SCONS)
	 - bugfixes in central classes
	 - new gui graphics
	 - and many more...

2004-07-18  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* quaternion.h
	  - fixed serious bug, new default c'tor