@@ -50,7 +50,8 @@ texture *background, *gauge1,
 font *font_arial, *font_arialbd, *font_times, *font_timesbd, *font_verdana, *font_verdanabd;
 
 sound *torpedo_launch_sound, *torpedo_detonation_submerged[2],
-	*torpedo_detonation_surfaced[2];
+	*torpedo_detonation_surfaced[2], *deck_gun_firing_sound, *depth_charge_firing_sound, *depth_charge_exploding_sound, 
+	*ping_sound, *shell_exploding_sound, *shell_splash_sound;
 
 image *titlebackgrimg, *periscope, *threesubsimg, *damage_screen_background,
 	*sub_damage_scheme_all, *killedimg, *scopewatcherimg,
@@ -112,10 +113,16 @@ void init_global_data(void)
 	add_loading_screen("textures loaded");
 
 	torpedo_launch_sound = new sound(get_sound_dir() + "liquidblast.ogg"); // "torpedo_launch.wav" );
-	torpedo_detonation_submerged[0] = new sound(get_sound_dir() + "torpedo_detonation_submerged_1.wav" );
-	torpedo_detonation_submerged[1] = new sound(get_sound_dir() + "torpedo_detonation_submerged_2.wav" );
-	torpedo_detonation_surfaced[0] = new sound(get_sound_dir() + "torpedo_detonation_surfaced_1.wav" );
-	torpedo_detonation_surfaced[1] = new sound(get_sound_dir() + "torpedo_detonation_surfaced_2.wav" );
+	torpedo_detonation_submerged[0] = new sound(get_sound_dir() + "shell explosion.ogg");//"torpedo_detonation_submerged_1.wav" );
+	torpedo_detonation_submerged[1] = new sound(get_sound_dir() + "shell explosion.ogg");//"torpedo_detonation_submerged_2.wav" );
+	torpedo_detonation_surfaced[0] = new sound(get_sound_dir() + "shell explosion.ogg");//"torpedo_detonation_surfaced_1.wav" );
+	torpedo_detonation_surfaced[1] = new sound(get_sound_dir() + "shell explosion.ogg");//"torpedo_detonation_surfaced_2.wav" );
+	deck_gun_firing_sound = new sound(get_sound_dir() + "deck gun firing.ogg");	
+	depth_charge_firing_sound = new sound(get_sound_dir() + "depth charge launching.ogg");	
+	depth_charge_exploding_sound = new sound(get_sound_dir() + "depth charge exploding.ogg");	
+	ping_sound = new sound(get_sound_dir() + "ping.ogg");
+	shell_exploding_sound = new sound(get_sound_dir() + "shell explosion.ogg");
+	shell_splash_sound = new sound(get_sound_dir() + "shell splash.ogg");
 	add_loading_screen("sounds loaded");
 
 	titlebackgrimg = new image(get_image_dir() + "titlebackgr.jpg");
@@ -181,6 +188,12 @@ void deinit_global_data(void)
 	delete torpedo_detonation_submerged[1];
 	delete torpedo_detonation_surfaced[0];
 	delete torpedo_detonation_surfaced[1];
+	delete deck_gun_firing_sound;
+	delete depth_charge_firing_sound;
+	delete depth_charge_exploding_sound;
+	delete ping_sound;
+	delete shell_exploding_sound;
+	delete shell_splash_sound;
 	delete woodbackgr;
 	delete notepadsheet;
 	delete menuframe;
