@@ -107,17 +107,40 @@ void view_model(const string& modelfilename)
 	}
 }
 
+#ifdef WIN32
+int WinMain(HINSTANCE, HINSTANCE, LPSTR cmdline, int)
+{
+    string mycmdline(cmdline);
+#else
 int main(int argc, char** argv)
 {
+#endif
+
 	// command line argument parsing
 	res_x = 1024;
 	bool fullscreen = true;
 	list<string> args;
-	while (--argc > 0) args.push_front(string(argv[argc]));
+	string programname;
+
+#ifdef WIN32
+    // parse mycmdline
+    while (mycmdline != "") {
+        string::size_type st = mycmdline.find(" ");
+        args.push_back(mycmdline.substr(0, st));
+        if (st == string::npos) break;
+        mycmdline = mycmdline.substr(st+1);
+    }
+	programname = "viewmodel.exe";
+#else
+     //parse argc, argv
+     while (--argc > 0) args.push_front(string(argv[argc]));
+	 programname = argv[0];
+#endif
+
 	string modelfilename;
 	for (list<string>::iterator it = args.begin(); it != args.end(); ++it) {
 		if (*it == "--help") {
-			cout << argv[0] << ", usage:\n--help\t\tshow this\n"
+			cout << programname << ", usage:\n--help\t\tshow this\n"
 			<< "--res n\t\tuse resolution n horizontal,\n\t\tn is 512,640,800,1024 (recommended) or 1280\n"
 			<< "--nofullscreen\tdon't use fullscreen\n"
 			<< "MODELFILENAME\n";
